--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,5 @@
 sonar.projectKey=ProyectoCondominio
 sonar.projectName=ProyectoCondominio
-sonar.python.coverage.reportPaths=C:/Users/Admin/Desktop/Jesé/UNMSM/2021-2/Calidad y prueba de SW/Proyecto2/Calidad/applications/actividades/coverage.xml,
-C:/Users/Admin/Desktop/Jesé/UNMSM/2021-2/Calidad y prueba de SW/Proyecto2/Calidad/applications/administracion/coverage.xml,
-C:/Users/Admin/Desktop/Jesé/UNMSM/2021-2/Calidad y prueba de SW/Proyecto2/Calidad/applications/mantenimiento/coverage.xml,
-C:/Users/Admin/Desktop/Jesé/UNMSM/2021-2/Calidad y prueba de SW/Proyecto2/Calidad/applications/materiales/coverage.xml,
-C:/Users/Admin/Desktop/Jesé/UNMSM/2021-2/Calidad y prueba de SW/Proyecto2/Calidad/applications/servicio/coverage.xml,
-C:/Users/Admin/Desktop/Jesé/UNMSM/2021-2/Calidad y prueba de SW/Proyecto2/Calidad/applications/trabajadores/coverage.xml,
-C:/Users/Admin/Desktop/Jesé/UNMSM/2021-2/Calidad y prueba de SW/Proyecto2/Calidad/applications/users/coverage.xml,
-C:/Users/Admin/Desktop/Jesé/UNMSM/2021-2/Calidad y prueba de SW/Proyecto2/Calidad/applications/usuario/coverage.xml
+sonar.python.coverage.reportPaths=./coverage.xml
 sonar.projectVersion=1.5
+sonar.python.version=3.8
