--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,9 @@ name: Build
 on:
   push:
     branches:
+      - main
       - version-completa
+      - jese
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
