eliminando test.py

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=ProyectoCondominio
 sonar.projectName=ProyectoCondominio
-sonar.python.coverage.reportPaths=./coverage.xml
+sonar.python.coverage.reportPaths=coverage.xml
 sonar.projectVersion=1.5
 sonar.python.version=3.8
